--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     },
     "dependencies": {
         "@types/node": "^15.12.2",
-        "freeze-click": "^1.4.2"
+        "freeze-click": "^1.4.2",
+        "return-data": "^0.3.3"
     }
 }
