--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "module": "dist/commonly-decorators.es.js",
     "types": "typings/index.d.ts",
     "scripts": {
+        "test": "echo success",
         "lint": "eslint --ext .ts --ext .tsx src -c .eslintrc.js",
         "fix": "npm run lint --fix",
         "prebuild": "rimraf dist",
